Client UI updates.
Changed Lobby data class names.